--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "swagger-jsdoc-support",
   "displayName": "Swagger JSDoc Support",
-  "description": "",
+  "description": "Syntax Highlighting for Swagger in JSDoc comments",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.83.0"
@@ -25,12 +25,6 @@
         "embeddedLanguages": {
           "meta.embedded.block.yaml": "source.yaml"
         }
-      }
-    ],
-    "typescriptServerPlugins": [
-      {
-        "enableForWorkspaceTypeScriptVersions": true,
-        "name": "typescript-swagger-jsdocs-plugin"
       }
     ]
   }
